; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/drill/extr_drill_util.c_ldns_rdf_new_addr_frm_str.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/drill/extr_drill_util.c_ldns_rdf_new_addr_frm_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LDNS_RDF_TYPE_A = common dso_local global i32 0, align 4
@LDNS_RDF_TYPE_AAAA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ldns_rdf_new_addr_frm_str(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i32, i32* @LDNS_RDF_TYPE_A, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32* @ldns_rdf_new_frm_str(i32 %5, i8* %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %18, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @LDNS_RDF_TYPE_AAAA, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i32* @ldns_rdf_new_frm_str(i32 %11, i8* %12)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %10
  store i32* null, i32** %2, align 8
  br label %20

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %17, %1
  %19 = load i32*, i32** %4, align 8
  store i32* %19, i32** %2, align 8
  br label %20

20:                                               ; preds = %18, %16
  %21 = load i32*, i32** %2, align 8
  ret i32* %21
}

declare dso_local i32* @ldns_rdf_new_frm_str(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
